--- a/client/home/home.html
+++ b/client/home/home.html
@@ -1,9 +1,14 @@
 <div class = "container">
-    <div class="col-md-6">
-        <h2>
-            Your Designs
+    <div class="col-md-6" ng-repeat="des in dess=(designs | filter: des.dellEmc.saEmail = auth.profile.email)">
+        <h2 ng-if="$first">
+             Welcome {{des.dellEmc.saName}}, Your Designs:
         </h2>
     </div>
+
+    <div class="col-md-6">
+        <h2 ng-show="!dess.length">You don't have any designs stored!</h2>
+    </div>
+
     <div class="col-md-3">
     </div>
     <div class="col-md-3">
@@ -13,11 +18,23 @@
 </div>
 <div class="container">
     <table class="table table-condensed table-striped table-bordered table-hover table-responsive">
-        <tbody>
-        <tr  ng-repeat="design in designs | filter:design.dellEmc.saEmail = auth.profile.email" style="cursor:pointer">
+        <tbody ng-if="dess.length">
+
+        <th>Company Name</th>
+        <th>Customer Name</th>
+        <th>Customer Email</th>
+        <th>Customer Contact</th>
+        <th>Design Start Date</th>
+        <tr  ng-repeat="design in designs | filter:design.dellEmc.saEmail = auth.profile.email | orderBy:design.createDate:true"  style="cursor:pointer">
+
             <td>
-                <a ui-sref="designDetail({designId: design._id})">{{ design.customer.accnt }} :: {{ design.createDate| date:'dd-MMM-yyyy' }}</a>
+                <a ui-sref="designDetail({designId: design._id})">{{ design.customer.accnt }}</a>
             </td>
+            <td> {{ design.customer.name}}</td>
+            <td> {{ design.customer.email}}</td>
+            <td> {{ design.customer.contact}}</td>
+            <td> {{ design.createDate| date:'dd-MMM-yyyy' }}</td>
+
 
         </tr>
         </tbody>
