--- a/client/newDesign/designForm.html
+++ b/client/newDesign/designForm.html
@@ -25,31 +25,31 @@
                 <div class="form-group">
                     <label class="col-sm-4 control-label">SA Contact</label>
                     <div class="col-sm-8">
-                        <input  class="form-control" type="text" ng-model="design.dellEmc.saContact" required>
+                        <input  class="form-control" type="text" ng-model="design.dellEmc.saContact" >
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-4 control-label">PM Name</label>
                     <div class="col-sm-8">
-                        <input  class="form-control" type="text" ng-model="design.dellEmc.pmName" required>
+                        <input  class="form-control" type="text" ng-model="design.dellEmc.pmName" >
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-4 control-label">PM Email</label>
                     <div class="col-sm-8">
-                        <input  class="form-control" type="text" ng-model="design.dellEmc.pmEmail" required>
+                        <input  class="form-control" type="text" ng-model="design.dellEmc.pmEmail" >
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-4 control-label">PM Contact</label>
                     <div class="col-sm-8">
-                        <input  class="form-control" type="text" ng-model="design.dellEmc.pmContact" required>
+                        <input  class="form-control" type="text" ng-model="design.dellEmc.pmContact" >
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-4 control-label">Dell EMC Address</label>
                     <div class="col-sm-8">
-                        <input  class="form-control" type="text-area" ng-model="design.dellEmc.address" required>
+                        <input  class="form-control" type="text-area" ng-model="design.dellEmc.address" >
                     </div>
                 </div>
                 </legend>
