--- a/client/navbar/navbar.html
+++ b/client/navbar/navbar.html
@@ -5,7 +5,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-left">
-                <li ng-class="{active: activeTab === '/'}"><a ui-sref="/">Design</a></li>
+                <li ng-class="{active: activeTab === '/'}"><a ui-sref="/">Home</a></li>
                 <li ng-if="!auth.isAuthenticated" ng-class="{active: activeTab === 'login'}"><a ui-sref="login">SignIn</a></li>
 
             </ul>
