--- a/client/design/design.html
+++ b/client/design/design.html
@@ -58,6 +58,36 @@
             </table>
         </div>
 
+        <div class="panel panel-info" ng-if="design.vsphereVersion == '5.0' || design.vsphereVersion =='5.1'|| design.vsphereVersion =='5.5' || design.vsphereVersion =='6.0'">
+            <div class="panel-heading">Requirements for VMware vApp installation</div>
+            <div class="panel-body">
+                <ul>
+                    <li>VMware vCenter Server running in the vSphere Enterprise Edition environment.</li>
+                    <li>ViPR Controller deployment with a vApp requires administrative rights to the VMware Virtual Center.</li>
+                    <li>An installed VMware ESXi server 6.0, 5.5.x, 5.1.x or 5.0.x running in the vSphere environment, and VMFS 5.</li>
+                    <li>An installed vSphere Client from which you can access your vCenter Server.</li>
+                    <li>DRS-enabled cluster or resource pool in a DRS-enabled cluster.</li>
+                    <li>Datastore on shared block storage. Solid State Drive (SSD) or 10K RPM Fibre Channel forproduction environments. NL-SAS for non-production environments.</li>
+                    <li>Read/write latency for ESXi datastores should average 10ms or less.</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="panel panel-info" ng-if="design.vsphereVersion == '2012R2'">
+            <div class="panel-heading">Requirements for Microsoft Hyper-V</div>
+            <div class="panel-body">
+                <ul>
+                    <li>Windows Hyper-V Server 2012 R21</li>
+                    <li>System Center 2012 R2 Virtual Machine Manager. The deployment PowerShell script Provided with the installation must run on this server.</li>
+                    <li>Administrative rights or permission rights to the Microsoft System Center VirtualMachine Manager (SCVMM).</li>
+                    <li>High speed network connection between SCVMM server and Hyper-V nodes.</li>
+                    <li>Enough memory to run ViPR Controller nodes.</li>
+                    <li>Solid State Drive (SSD) or 10K RPM Fibre Channel for production environments. NLSAS for non-production environments.</li>
+                    <li>Read/write latency for underlying drives should average 10 ms or less.</li>
+                </ul>
+            </div>
+        </div>
+
         <div class="well" ng-if="design.viprHa">
             <legend>ViPR Infrastructure and Network Details</legend>
             <table class="table table-condensed table-striped table-responsive table-bordered">
@@ -173,35 +203,20 @@
             </table>
         </div>
 
-        <div class="panel panel-info" ng-if="design.vsphereVersion == '5.0' || design.vsphereVersion =='5.1'|| design.vsphereVersion =='5.5' || design.vsphereVersion =='6.0'">
-            <div class="panel-heading">Requirements for VMware vApp installation</div>
-            <div class="panel-body">
-            <ul>
-                <li>VMware vCenter Server running in the vSphere Enterprise Edition environment.</li>
-                <li>ViPR Controller deployment with a vApp requires administrative rights to the VMware Virtual Center.</li>
-                <li>An installed VMware ESXi server 6.0, 5.5.x, 5.1.x or 5.0.x running in the vSphere environment, and VMFS 5.</li>
-                <li>An installed vSphere Client from which you can access your vCenter Server.</li>
-                <li>DRS-enabled cluster or resource pool in a DRS-enabled cluster.</li>
-                <li>Datastore on shared block storage. Solid State Drive (SSD) or 10K RPM Fibre Channel forproduction environments. NL-SAS for non-production environments.</li>
-                <li>Read/write latency for ESXi datastores should average 10ms or less.</li>
-            </ul>
-            </div>
-        </div>
-
-        <div class="panel panel-info" ng-if="design.vsphereVersion == '2012R2'">
-            <div class="panel-heading">Requirements for Microsoft Hyper-V</div>
+        <div class="panel panel-info" ng-if="design.viprHa">
+            <div class="panel-heading">VM Resource Recommendations</div>
             <div class="panel-body">
                 <ul>
-                    <li>Windows Hyper-V Server 2012 R21</li>
-                    <li>System Center 2012 R2 Virtual Machine Manager. The deployment PowerShell script Provided with the installation must run on this server.</li>
-                    <li>Administrative rights or permission rights to the Microsoft System Center VirtualMachine Manager (SCVMM).</li>
-                    <li>High speed network connection between SCVMM server and Hyper-V nodes.</li>
-                    <li>Enough memory to run ViPR Controller nodes.</li>
-                    <li>Solid State Drive (SSD) or 10K RPM Fibre Channel for production environments. NLSAS for non-production environments.</li>
-                    <li>Read/write latency for underlying drives should average 10 ms or less.</li>
+                    <li>Reserving above mentioned memory for each VM is strongly recommended in production environment.</li>
+                    <li>Serios performance issues may be observed due to lack of enough memory on ViPR VMs.</li>
+                    <li>Each vCPU = 1 physical core of Intel Xeon E5 or E7 families with 2.4 GHz or higher speed.</li>
+                    <li>Thick provisioned eager zeroed disks are recommended for production environments.</li>
+                    <li>Thin provisioned is acceptable for non-production environments.</li>
+                    <li>1 Gbps network bandwidth should be available to each VM.</li>
                 </ul>
             </div>
         </div>
+
 
 
         <div class="well" ng-if="design.isVmax2 ||design.isVmax3||design.isVnxBlock ||design.isVplex ||design.isRp">
