--- a/client/newDesign/designForm.html
+++ b/client/newDesign/designForm.html
@@ -13,7 +13,7 @@
                 <div class="form-group">
                     <label class="col-sm-4 control-label">SA Name</label>
                     <div class="col-sm-8">
-                        <input  class="form-control" type="text" ng-model="design.dellEmc.saName" required>
+                        <input  class="form-control" type="text" ng-model="design.dellEmc.saName" placeholder="*required field*" required>
                     </div>
                 </div>
                 <div class="form-group">
@@ -66,7 +66,7 @@
                 <div class="form-group">
                     <label class="col-sm-4 control-label">Company Name</label>
                     <div class="col-sm-8">
-                        <input  class="form-control" type="text-area" ng-model="design.customer.accnt" required>
+                        <input  class="form-control" type="text-area" ng-model="design.customer.accnt" placeholder="*required field*" required>
                     </div>
                 </div>
                 <div class="form-group">
@@ -84,19 +84,19 @@
                 <div class="form-group">
                     <label class="col-sm-4 control-label">Customer Name</label>
                     <div class="col-sm-8">
-                        <input  class="form-control" type="text-area" ng-model="design.customer.name" required>
+                        <input  class="form-control" type="text-area" ng-model="design.customer.name"  placeholder="*required field*" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-4 control-label">Customer Email</label>
                     <div class="col-sm-8">
-                        <input  class="form-control" type="text-area" ng-model="design.customer.email" required>
+                        <input  class="form-control" type="text-area" ng-model="design.customer.email"  placeholder="*required field*" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-4 control-label">Customer Contact</label>
                     <div class="col-sm-8">
-                        <input  class="form-control" type="text-area" ng-model="design.customer.contact" required>
+                        <input  class="form-control" type="text-area" ng-model="design.customer.contact"  placeholder="*required field*" required>
                     </div>
                 </div>
                 <div class="form-group">
