added client side validations

--- a/client/newDesign/designForm.html
+++ b/client/newDesign/designForm.html
@@ -734,9 +734,8 @@
 
     <div>
         <p>
-            <button  class="btn btn-default" ng-click="saveDesign(design)">Save</button>
-            <button type="submit" class="btn btn-primary" ng-disabled="designForm.$invalid">Submit</button>
-            <button  class="btn btn-default" ng-click="back()">Back</button>
+            <button type="submit" class="btn btn-primary" ng-disabled="designForm.$invalid">Save</button>
+            <button  class="btn btn-primary" ng-click="back()">Back</button>
         </p>
     </div>
 
