--- a/client/home/home.html
+++ b/client/home/home.html
@@ -1,18 +1,16 @@
 <div class = "container">
-    <div class="col-md-6" ng-repeat="des in dess=(designs | filter: des.dellEmc.saEmail = auth.profile.email)">
-        <h2 ng-if="$first">
-             Welcome {{des.dellEmc.saName}}, Your Designs:
-        </h2>
+    <div  ng-if="$first"  class="col-md-6 alert alert-info" ng-repeat="des in dess=(designs | filter: des.dellEmc.saEmail = auth.profile.email)">
+            <h4> Welcome {{des.dellEmc.saName}}, Your Designs:</h4>
     </div>
 
-    <div class="col-md-6">
-        <h2 ng-show="!dess.length">You don't have any designs stored!</h2>
+    <div  ng-show="!dess.length" class="col-md-6 alert alert-danger">
+        <h4>You don't have any designs stored!</h4>
     </div>
 
     <div class="col-md-3">
     </div>
     <div class="col-md-3">
-        <a  style="margin-top:20px" class="btn btn-default pull-right" ui-sref="newdesign">Start New Design</a>
+        <a   class="btn btn-primary pull-right" ui-sref="newdesign">Start New Design</a>
     </div>
 
 </div>
