--- a/client/design/design.html
+++ b/client/design/design.html
@@ -431,8 +431,8 @@
 
 
         <p>
-            <button style="margin-top:20px" class="btn btn-default" ng-click="toggleEdit()">Edit</button>
-            <a style="margin-top:20px" class="btn btn-default" ui-sref="/">Back</a>
+            <button style="margin-top:20px" class="btn btn-primary" ng-click="toggleEdit()">Edit</button>
+            <a style="margin-top:20px" class="btn btn-primary" ui-sref="/">Back</a>
             <a ui-sref="/"><button  style="margin-top:20px" class="btn btn-danger " ng-click="deleteDesign(design._id)">Delete Design</button></a>
 
         </p>
