--- a/client/newDesign/designForm.html
+++ b/client/newDesign/designForm.html
@@ -735,7 +735,7 @@
     <div>
         <p>
             <button type="submit" class="btn btn-primary" ng-disabled="designForm.$invalid">Save</button>
-            <button  class="btn btn-primary" ng-click="back()">Back</button>
+            <button  class="btn btn-primary" ui-sref="/">Back</button>
         </p>
     </div>
 
