--- a/client/design/design.html
+++ b/client/design/design.html
@@ -24,10 +24,10 @@
 
             <legend>Created By:</legend>
             <p ng-if="design.dellEmc.saName">{{ design.dellEmc.saName }}, Solutions Architect</p>
-            <p ng-if="design.dellEmc.saEmail"><a ng-href="mailto:{{ design.dellEmc.saEmail }}" target="_blank">{{ design.dellEmc.saEmail }} </a>, {{ design.dellEmc.saContact }}</p>
+            <p ng-if="design.dellEmc.saEmail"><a ng-href="mailto:{{ design.dellEmc.saEmail }}" >{{ design.dellEmc.saEmail }} </a>, {{ design.dellEmc.saContact }}</p>
             <hr>
             <p ng-if="design.dellEmc.pmName">{{ design.dellEmc.pmName }}, Project Manager</p>
-            <p ng-if="design.dellEmc.pmEmail"><a ng-href="mailto:{{ design.dellEmc.pmEmail }}" target="_blank">{{ design.dellEmc.pmEmail }} </a>, {{design.dellEmc.pmContact}}</p>
+            <p ng-if="design.dellEmc.pmEmail"><a ng-href="mailto:{{ design.dellEmc.pmEmail }}" >{{ design.dellEmc.pmEmail }} </a>, {{design.dellEmc.pmContact}}</p>
             <p ng-if="design.dellEmc.address"> {{ design.dellEmc.address }} </p>
 
         </div>
